better looking frozen caves again